update HTML e CSS :dart:

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <li>
                     <a href="">Loja</a>
                 </li>
-                <li>
+                <li id="btn-cafe">
                     <button>PEGAR MEU CAFÉ</button>
                 </li>
             </ul>
@@ -36,7 +36,7 @@
     </header>
     <div class="title">
         <h1>Great Coffee</h1>
-        <h1>< Great Code/ ></h1>
+        <h1 id="second-title">< Great Code /> </h1>
     </div>
     <div id="background-img">
         <img src="./assets/c1.png" alt="">
