update responsivo mobile :computer:

--- a/index.html
+++ b/index.html
@@ -7,41 +7,68 @@
     <title>Document</title>
 </head>
 <body>
-    <header>
-        <nav>
+    <div class="">
+        <header>
+            <nav>
+                <ul>
+                    <li id="logo_rocket">
+                        <img src="./assets/logo-desktop.svg" alt="">
+                    </li>
+                    <li>
+                        <a href="">Home</a>
+                    </li>
+                    <li>
+                        <a href="">Menu</a>
+                    </li>
+                    <li>
+                        <a href="">Recompensas</a>
+                    </li>
+                    <li>
+                        <a href="">Gifs Cards</a>
+                    </li>
+                    <li>
+                        <a href="">Loja</a>
+                    </li>
+                    <li id="btn-cafe">
+                        <button>PEGAR MEU CAFÉ</button>
+                    </li>
+                </ul>
+            </nav>
+        </header>
+        <div class="title">
+            <h1>Great Coffee</h1>
+            <h1 id="second-title">< Great Code /> </h1>
+        </div>
+        <div id="background-img">
+            <img src="./assets/c1.png" alt="">
+            <img src="./assets/Group 5 1.png" alt="Copos de Café">
+            <img src="./assets/c2.png" alt="">
+        </div>
+    </div>
+    <div class="mobile">
+        <header>
             <ul>
-                <li id="logo_rocket">
-                    <img src="./assets/Logo.svg" alt="">
+                <li>
+                    <img src="./assets/logo-mobile.svg" alt="">
                 </li>
                 <li>
-                    <a href="">Home</a>
-                </li>
-                <li>
-                    <a href="">Menu</a>
-                </li>
-                <li>
-                    <a href="">Recompensas</a>
-                </li>
-                <li>
-                    <a href="">Gifs Cards</a>
-                </li>
-                <li>
-                    <a href="">Loja</a>
-                </li>
-                <li id="btn-cafe">
-                    <button>PEGAR MEU CAFÉ</button>
+                    <a href=""><img src="./assets/menu-buguer-open.svg" alt=""></a>
                 </li>
             </ul>
-        </nav>
-    </header>
-    <div class="title">
-        <h1>Great Coffee</h1>
-        <h1 id="second-title">< Great Code /> </h1>
-    </div>
-    <div id="background-img">
-        <img src="./assets/c1.png" alt="">
-        <img src="./assets/Group 5 1.png" alt="Copos de Café">
-        <img src="./assets/c2.png" alt="">
+        </header>
+        <div id="title-mobile">
+            <p>O café que fará seu código decolar para o próximo nível.</p>
+        </div>
+        <button id="button-mobile">PEGAR MEU CAFÉ <img src="./assets/arrow.svg" alt=""></button>
+        <div class="text-mobile">
+            <h1>Great Coffee</h1>
+            <h1 id="second-title">< Great Code /> </h1>
+        </div>
+        <div id="background-img-mobile">
+            <img class="img2" src="./assets/c1.png" alt="">
+            <img src="./assets/Group 5 1.png" alt="Copos de Café">
+            <img class="img2" src="./assets/c2.png" alt="">
+        </div>
     </div>
 </body>
 </html>
