--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <script src="/script.js" defer></script>
     <title>Document</title>
 </head>
 <body>
-    <div class="">
+    <div class="desktop">
         <header>
             <nav>
                 <ul>
@@ -45,7 +46,7 @@
             <img src="./assets/c2.png" alt="">
         </div>
     </div>
-    <div class="mobile">
+    <div class="hide">
         <header>
             <ul>
                 <li>
