update HTML CSS Js :dart:

--- a/index.html
+++ b/index.html
@@ -53,17 +53,36 @@
                     <img src="./assets/logo-mobile.svg" alt="">
                 </li>
                 <li>
-                    <a href=""><img src="./assets/menu-buguer-open.svg" alt=""></a>
+                    <a id="menu-buguer-open" href="">
+                        <img id="buguer-open" src="./assets/menu-buguer-open.svg" alt="">
+                    </a>
                 </li>
             </ul>
         </header>
+        <ul class="hide-menu">
+            <li>
+                <a href="">Home</a>
+            </li>
+            <li>
+                <a href="">Menu</a>
+            </li>
+            <li>
+                <a href="">Recompensas</a>
+            </li>
+            <li>
+                <a href="">Gifs Cards</a>
+            </li>
+            <li>
+                <a href="">Lojas</a>
+            </li>
+        </ul>
         <div id="title-mobile">
             <p>O café que fará seu código decolar para o próximo nível.</p>
         </div>
         <button id="button-mobile">PEGAR MEU CAFÉ <img src="./assets/arrow.svg" alt=""></button>
         <div class="text-mobile">
             <h1>Great Coffee</h1>
-            <h1 id="second-title">< Great Code /> </h1>
+            <h1 id="text-title">< Great Code /> </h1>
         </div>
         <div id="background-img-mobile">
             <img class="img2" src="./assets/c1.png" alt="">
