--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <img src="./assets/logo-mobile.svg" alt="">
                 </li>
                 <li>
-                    <a id="menu-buguer-open" href="">
+                    <a id="menu-buguer-mobile" href="">
                         <img id="buguer-open" src="./assets/menu-buguer-open.svg" alt="">
                     </a>
                 </li>
